--- a/style.css
+++ b/style.css
@@ -59,3 +59,17 @@ a {
 .wrapper p {
     margin: 10px 0;
 }
+
+.highlight {
+    transition: all 0.2s;
+    border-bottom: 2px solid white;
+    position: absolute;
+    top: 0;
+    background: white;
+    left: 0;
+    z-index: -1;
+    border-radius: 20px;
+    display: block;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    /* border: 1px solid red; */
+}
